Corrects z-index bug and improves link transitions.

--- a/src/Components/styles/About.module.scss
+++ b/src/Components/styles/About.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: flex-start;
     position: absolute;
+    z-index: 1000;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -41,7 +42,7 @@
             color: white;
             // text-decoration: none;
             font-weight: 700;
-            transition: all 0.2s ease-in-out;
+            transition: all 0.1s ease-in-out;
     
             &:hover {
                 color: #5035FF;
@@ -72,7 +73,7 @@
             color: white;
             text-decoration: none;
             font-weight: 700;
-            transition: all 0.2s ease-in-out;
+            transition: all 0.1s ease-in-out;
             margin-right: 1rem;
     
             &:hover {
